[gd_scene load_steps=2 format=3 uid="uid://knvdi0n5g12w"]

[ext_resource type="Script" path="res://Scripts/GUI.gd" id="1_odg22"]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource("1_odg22")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1158.0
offset_bottom = 650.0
color = Color(0.694118, 0.670588, 1, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
offset_left = 68.0
offset_top = 46.0
offset_right = 215.0
offset_bottom = 568.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Reset_Board" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Reset Board"

[node name="Host_Server" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Host Server"

[node name="Join_Server" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Join Server"

[node name="Disconnect" type="Button" parent="MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
disabled = true
text = "Disconnect"

[node name="Sync_Chess" type="Button" parent="MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
text = "Sync Chess"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Reset_Board" to="." method="_on_reset_board_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Host_Server" to="." method="_on_host_server_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Join_Server" to="." method="_on_join_server_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Disconnect" to="." method="_on_disconnect_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Sync_Chess" to="." method="_on_sync_chess_pressed"]
